--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -269,6 +269,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\targetslist.cpp" />
     <ClCompile Include="src\terraincat.cpp" />
     <ClCompile Include="src\terraincountlist.cpp" />
+    <ClCompile Include="src\terrainnamelist.cpp" />
     <ClCompile Include="src\textboxinterf.cpp" />
     <ClCompile Include="src\textids.cpp" />
     <ClCompile Include="src\tilevariation.cpp" />
@@ -557,6 +558,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\taskmanagerholder.h" />
     <ClInclude Include="include\terraincat.h" />
     <ClInclude Include="include\terraincountlist.h" />
+    <ClInclude Include="include\terrainnamelist.h" />
     <ClInclude Include="include\textandid.h" />
     <ClInclude Include="include\textboxinterf.h" />
     <ClInclude Include="include\textids.h" />
