--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -315,6 +315,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="..\lua\lvm.h" />
     <ClInclude Include="..\lua\lzio.h" />
     <ClInclude Include="include\2denginemap.h" />
+    <ClInclude Include="include\2denginemapimpl.h" />
     <ClInclude Include="include\aipriority.h" />
     <ClInclude Include="include\attack.h" />
     <ClInclude Include="include\attackclasscat.h" />
