--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -281,6 +281,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\textboxinterf.cpp" />
     <ClCompile Include="src\textids.cpp" />
     <ClCompile Include="src\tileindices.cpp" />
+    <ClCompile Include="src\tileindiceshooks.cpp" />
     <ClCompile Include="src\tilevariation.cpp" />
     <ClCompile Include="src\tilevariationhooks.cpp" />
     <ClCompile Include="src\transformselfhooks.cpp" />
@@ -585,6 +586,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\textboxinterf.h" />
     <ClInclude Include="include\textids.h" />
     <ClInclude Include="include\tileindices.h" />
+    <ClInclude Include="include\tileindiceshooks.h" />
     <ClInclude Include="include\tilevariation.h" />
     <ClInclude Include="include\tilevariationhooks.h" />
     <ClInclude Include="include\transformselfhooks.h" />
