--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -276,6 +276,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\transformselfhooks.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
+    <ClCompile Include="src\unitinfolist.cpp" />
     <ClCompile Include="src\unitsforhire.cpp" />
     <ClCompile Include="src\unitutils.cpp" />
     <ClCompile Include="src\utils.cpp" />
@@ -571,6 +572,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\unitbranchcat.h" />
     <ClInclude Include="include\unitcat.h" />
     <ClInclude Include="include\unitgenerator.h" />
+    <ClInclude Include="include\unitinfolist.h" />
     <ClInclude Include="include\unitmodifier.h" />
     <ClInclude Include="include\unitsforhire.h" />
     <ClInclude Include="include\unitutils.h" />
