--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -277,6 +277,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitcat.cpp" />
     <ClCompile Include="src\unitinfolist.cpp" />
+    <ClCompile Include="src\unitpositionlist.cpp" />
     <ClCompile Include="src\unitsforhire.cpp" />
     <ClCompile Include="src\unitutils.cpp" />
     <ClCompile Include="src\utils.cpp" />
@@ -574,6 +575,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\unitgenerator.h" />
     <ClInclude Include="include\unitinfolist.h" />
     <ClInclude Include="include\unitmodifier.h" />
+    <ClInclude Include="include\unitpositionlist.h" />
     <ClInclude Include="include\unitsforhire.h" />
     <ClInclude Include="include\unitutils.h" />
     <ClInclude Include="include\ussoldier.h" />
