--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -161,6 +161,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\battleattackinfo.cpp" />
     <ClCompile Include="src\battlemsgdata.cpp" />
     <ClCompile Include="src\battlemsgdatahooks.cpp" />
+    <ClCompile Include="src\battleviewerinterf.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
     <ClCompile Include="src\bindings\unitimplview.cpp" />
     <ClCompile Include="src\bindings\unitview.cpp" />
