--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -239,6 +239,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midunitgroup.cpp" />
     <ClCompile Include="src\midunit.cpp" />
     <ClCompile Include="src\modifierutils.cpp" />
+    <ClCompile Include="src\mqrect.cpp" />
     <ClCompile Include="src\multilayerimg.cpp" />
     <ClCompile Include="src\musichooks.cpp" />
     <ClCompile Include="src\netmessages.cpp" />
