--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -158,6 +158,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\batattacksummon.cpp" />
     <ClCompile Include="src\batattacktransformself.cpp" />
     <ClCompile Include="src\batattackutils.cpp" />
+    <ClCompile Include="src\batimagesloader.cpp" />
     <ClCompile Include="src\battleattackinfo.cpp" />
     <ClCompile Include="src\battlemsgdata.cpp" />
     <ClCompile Include="src\battlemsgdatahooks.cpp" />
@@ -340,6 +341,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batattacksummon.h" />
     <ClInclude Include="include\batattacktransformself.h" />
     <ClInclude Include="include\batattackutils.h" />
+    <ClInclude Include="include\batimagesloader.h" />
     <ClInclude Include="include\battleattackinfo.h" />
     <ClInclude Include="include\battlemsgdata.h" />
     <ClInclude Include="include\battlemsgdatahooks.h" />
