--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -163,6 +163,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\battlemsgdata.cpp" />
     <ClCompile Include="src\battlemsgdatahooks.cpp" />
     <ClCompile Include="src\battleviewerinterf.cpp" />
+    <ClCompile Include="src\batviewer2dengine.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
     <ClCompile Include="src\bindings\unitimplview.cpp" />
     <ClCompile Include="src\bindings\unitview.cpp" />
@@ -348,6 +349,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\battleviewerinterf.h" />
     <ClInclude Include="include\batunitanim.h" />
     <ClInclude Include="include\batviewer.h" />
+    <ClInclude Include="include\batviewer2dengine.h" />
     <ClInclude Include="include\batviewerutils.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
     <ClInclude Include="include\bindings\unitimplview.h" />
