--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -225,6 +225,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\mempool.cpp" />
     <ClCompile Include="src\menubase.cpp" />
     <ClCompile Include="src\menulord.cpp" />
+    <ClCompile Include="src\menulordhooks.cpp" />
     <ClCompile Include="src\menunewskirmish.cpp" />
     <ClCompile Include="src\menunewskirmishsingle.cpp" />
     <ClCompile Include="src\menurace.cpp" />
@@ -475,6 +476,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mempool.h" />
     <ClInclude Include="include\menubase.h" />
     <ClInclude Include="include\menulord.h" />
+    <ClInclude Include="include\menulordhooks.h" />
     <ClInclude Include="include\menunewskirmish.h" />
     <ClInclude Include="include\menunewskirmishsingle.h" />
     <ClInclude Include="include\menuphase.h" />
