--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -187,6 +187,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\customattack.cpp" />
     <ClCompile Include="src\customattackhooks.cpp" />
     <ClCompile Include="src\customattacks.cpp" />
+    <ClCompile Include="src\customattackutils.cpp" />
     <ClCompile Include="src\d2osexception.cpp" />
     <ClCompile Include="src\d2string.cpp" />
     <ClCompile Include="src\dbfaccess.cpp" />
@@ -380,6 +381,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\customattack.h" />
     <ClInclude Include="include\customattackhooks.h" />
     <ClInclude Include="include\customattacks.h" />
+    <ClInclude Include="include\customattackutils.h" />
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2osexception.h" />
     <ClInclude Include="include\d2pair.h" />
