--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -566,6 +566,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\subracecat.h" />
     <ClInclude Include="include\summonhooks.h" />
     <ClInclude Include="include\targetslist.h" />
+    <ClInclude Include="include\task.h" />
     <ClInclude Include="include\taskmanagerholder.h" />
     <ClInclude Include="include\terraincat.h" />
     <ClInclude Include="include\terraincountlist.h" />
