--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -571,6 +571,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\taskbase.h" />
     <ClInclude Include="include\taskmanager.h" />
     <ClInclude Include="include\taskmanagerholder.h" />
+    <ClInclude Include="include\taskmapchange.h" />
     <ClInclude Include="include\terraincat.h" />
     <ClInclude Include="include\terraincountlist.h" />
     <ClInclude Include="include\terrainnamelist.h" />
