--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -427,6 +427,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\interftexthooks.h" />
     <ClInclude Include="include\isoengineground.h" />
     <ClInclude Include="include\isolayers.h" />
+    <ClInclude Include="include\isoview.h" />
     <ClInclude Include="include\item.h" />
     <ClInclude Include="include\itemarmor.h" />
     <ClInclude Include="include\itembanner.h" />
