--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -221,6 +221,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mapgen.cpp" />
     <ClCompile Include="src\mapgraphics.cpp" />
+    <ClCompile Include="src\mapinterf.cpp" />
     <ClCompile Include="src\mempool.cpp" />
     <ClCompile Include="src\menubase.cpp" />
     <ClCompile Include="src\menulord.cpp" />
@@ -466,6 +467,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mapelement.h" />
     <ClInclude Include="include\mapgen.h" />
     <ClInclude Include="include\mapgraphics.h" />
+    <ClInclude Include="include\mapinterf.h" />
     <ClInclude Include="include\mempool.h" />
     <ClInclude Include="include\menubase.h" />
     <ClInclude Include="include\menulord.h" />
