--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -471,6 +471,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mapinterf.h" />
     <ClInclude Include="include\mempool.h" />
     <ClInclude Include="include\menubase.h" />
+    <ClInclude Include="include\menubaseeditor.h" />
     <ClInclude Include="include\menulord.h" />
     <ClInclude Include="include\menunewskirmish.h" />
     <ClInclude Include="include\menunewskirmishsingle.h" />
