--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -229,6 +229,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\menulord.cpp" />
     <ClCompile Include="src\menunewmap.cpp" />
     <ClCompile Include="src\menulordhooks.cpp" />
+    <ClCompile Include="src\menunewmaphooks.cpp" />
     <ClCompile Include="src\menunewskirmish.cpp" />
     <ClCompile Include="src\menunewskirmishsingle.cpp" />
     <ClCompile Include="src\menurace.cpp" />
@@ -489,6 +490,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\menulord.h" />
     <ClInclude Include="include\menunewmap.h" />
     <ClInclude Include="include\menulordhooks.h" />
+    <ClInclude Include="include\menunewmaphooks.h" />
     <ClInclude Include="include\menunewskirmish.h" />
     <ClInclude Include="include\menunewskirmishsingle.h" />
     <ClInclude Include="include\menuphase.h" />
