Add SortedPointList and its api

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -265,6 +265,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\smartptr.cpp" />
     <ClCompile Include="src\movepathhooks.cpp" />
     <ClCompile Include="src\sortedcapitalracelist.cpp" />
+    <ClCompile Include="src\sortedpointlist.cpp" />
     <ClCompile Include="src\sortedracelist.cpp" />
     <ClCompile Include="src\stackbattleactionmsg.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
@@ -568,6 +569,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\sortedcapitalracelist.h" />
     <ClInclude Include="include\sortedlist.h" />
     <ClInclude Include="include\movepathhooks.h" />
+    <ClInclude Include="include\sortedpointlist.h" />
     <ClInclude Include="include\sortedracelist.h" />
     <ClInclude Include="include\spinbuttoninterf.h" />
     <ClInclude Include="include\stackbattleactionmsg.h" />
