Add CMidgardMap structure and its api

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -232,6 +232,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\middragdropinterf.cpp" />
     <ClCompile Include="src\midgard.cpp" />
     <ClCompile Include="src\midgardid.cpp" />
+    <ClCompile Include="src\midgardmap.cpp" />
     <ClCompile Include="src\midgardmapblock.cpp" />
     <ClCompile Include="src\midgardmsgbox.cpp" />
     <ClCompile Include="src\miditem.cpp" />
@@ -490,6 +491,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\middropmanager.h" />
     <ClInclude Include="include\midgard.h" />
     <ClInclude Include="include\midgardid.h" />
+    <ClInclude Include="include\midgardmap.h" />
     <ClInclude Include="include\midgardmapblock.h" />
     <ClInclude Include="include\midgardmsgbox.h" />
     <ClInclude Include="include\midgardobjectmap.h" />
